--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="shop-container">
 
     <div class="item-card">
-      <img src="images/Aqua Active Tank Top.png" alt="Aqua Active Tank Top">
+      <img src="images/Aqua%20Active%20Tank%20Top.png" alt="Aqua Active Tank Top">
       <div class="item-description">Aqua Active Tank Top - Breathable fabric for active lifestyles.</div>
       <div class="size-select">
         <label for="size1">Size:</label>
