--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Aqua-Mint Sports Bra.png" alt="Aqua-Mint Sports Bra">
+      <img src="images/Aqua-Mint%20Sports%20Bra.png" alt="Aqua-Mint Sports Bra">
       <div class="item-description">Aqua-Mint Sports Bra - Supportive and stylish for workouts.</div>
       <div class="size-select">
         <label for="size2">Size:</label>
@@ -62,7 +62,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Blush SPL Crop Top.png" alt="Blush SPL Crop Top">
+      <img src="images/Blush%20SPL%20Crop%20Top.png" alt="Blush SPL Crop Top">
       <div class="item-description">Blush SPL Crop Top - Soft and trendy crop top in blush pink.</div>
       <div class="size-select">
         <label for="size3">Size:</label>
@@ -76,7 +76,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Blush SPL T-Shirt.png" alt="Blush SPL T-Shirt">
+      <img src="images/Blush%20SPL%20T-Shirt.png" alt="Blush SPL T-Shirt">
       <div class="item-description">Blush SPL T-Shirt - Classic t-shirt in blush for everyday wear.</div>
       <div class="size-select">
         <label for="size4">Size:</label>
