--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Color-Block Active Top.png" alt="Color-Block Active Top">
+      <img src="images/Color-Block%20Active%20Top.png" alt="Color-Block Active Top">
       <div class="item-description">Color-Block Active Top - Stylish color-block design for activity or leisure.</div>
       <div class="size-select">
         <label for="size5">Size:</label>
@@ -104,7 +104,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Comfort Grief Pillow.png" alt="Comfort Grief Pillow">
+      <img src="images/Comfort%20Grief%20Pillow.png" alt="Comfort Grief Pillow">
       <div class="item-description">Comfort Grief Pillow - Soft pillow providing comfort and support.</div>
       <div class="size-select">
         <label for="size6">Size:</label>
@@ -118,7 +118,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Comfort Grief Socks.png" alt="Comfort Grief Socks">
+      <img src="images/Comfort%20Grief%20Socks.png" alt="Comfort Grief Socks">
       <div class="item-description">Comfort Grief Socks - Cozy socks for moments of relaxation.</div>
       <div class="size-select">
         <label for="size7">Size:</label>
@@ -132,7 +132,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/cool body suit.png" alt="Cool Body Suit">
+      <img src="images/cool%20body%20suit.png" alt="Cool Body Suit">
       <div class="item-description">Cool Body Suit - Sleek and comfortable body suit for all-day wear.</div>
       <div class="size-select">
         <label for="size8">Size:</label>
@@ -146,7 +146,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Coral Sports Bra Design.png" alt="Coral Sports Bra Design">
+      <img src="images/Coral%20Sports%20Bra%20Design.png" alt="Coral Sports Bra Design">
       <div class="item-description">Coral Sports Bra Design - Vibrant coral color for a fresh look.</div>
       <div class="size-select">
         <label for="size9">Size:</label>
@@ -160,7 +160,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Deep Berry SPL Yoga Pants.png" alt="Deep Berry SPL Yoga Pants">
+      <img src="images/Deep%20Berry%20SPL%20Yoga%20Pants.png" alt="Deep Berry SPL Yoga Pants">
       <div class="item-description">Deep Berry SPL Yoga Pants - Stretchy and bold for your yoga sessions.</div>
       <div class="size-select">
         <label for="size10">Size:</label>
@@ -174,7 +174,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Flesh-Colored SPL Body Suit.png" alt="Flesh-Colored SPL Body Suit">
+      <img src="images/Flesh-Colored%20SPL%20Body%20Suit.png" alt="Flesh-Colored SPL Body Suit">
       <div class="item-description">Flesh-Colored SPL Body Suit - Form-fitting suit in natural tones.</div>
       <div class="size-select">
         <label for="size11">Size:</label>
@@ -188,7 +188,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Lavender SPL Crop Top.png" alt="Lavender SPL Crop Top">
+      <img src="images/Lavender%20SPL%20Crop%20Top.png" alt="Lavender SPL Crop Top">
       <div class="item-description">Lavender SPL Crop Top - Soft lavender crop top with SPL logo.</div>
       <div class="size-select">
         <label for="size12">Size:</label>
@@ -202,7 +202,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Lavender SPL T-Shirt.png" alt="Lavender SPL T-Shirt">
+      <img src="images/Lavender%20SPL%20T-Shirt.png" alt="Lavender SPL T-Shirt">
       <div class="item-description">Lavender SPL T-Shirt - Everyday tee in gentle lavender hue.</div>
       <div class="size-select">
         <label for="size13">Size:</label>
@@ -216,7 +216,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Long Sleeve Anatomy Body Suit with Skirt.png" alt="Long Sleeve Anatomy Body Suit with Skirt">
+      <img src="images/Long%20Sleeve%20Anatomy%20Body%20Suit%20with%20Skirt.png" alt="Long Sleeve Anatomy Body Suit with Skirt">
       <div class="item-description">Long Sleeve Anatomy Body Suit with Skirt - Unique design for comfort and style.</div>
       <div class="size-select">
         <label for="size14">Size:</label>
@@ -230,7 +230,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Mint Sports Bra Design.png" alt="Mint Sports Bra Design">
+      <img src="images/Mint%20Sports%20Bra%20Design.png" alt="Mint Sports Bra Design">
       <div class="item-description">Mint Sports Bra Design - Refreshing mint for sporty looks.</div>
       <div class="size-select">
         <label for="size15">Size:</label>
@@ -244,7 +244,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Mint Tank with Coral Accents.png" alt="Mint Tank with Coral Accents">
+      <img src="images/Mint%20Tank%20with%20Coral%20Accents.png" alt="Mint Tank with Coral Accents">
       <div class="item-description">Mint Tank with Coral Accents - Breathable tank with vibrant accents.</div>
       <div class="size-select">
         <label for="size16">Size:</label>
@@ -258,7 +258,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Navy SPL Yoga Pants.png" alt="Navy SPL Yoga Pants">
+      <img src="images/Navy%20SPL%20Yoga%20Pants.png" alt="Navy SPL Yoga Pants">
       <div class="item-description">Navy SPL Yoga Pants - Classic navy yoga pants for all activities.</div>
       <div class="size-select">
         <label for="size17">Size:</label>
@@ -272,7 +272,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Peach SPL Crop Top.png" alt="Peach SPL Crop Top">
+      <img src="images/Peach%20SPL%20Crop%20Top.png" alt="Peach SPL Crop Top">
       <div class="item-description">Peach SPL Crop Top - Light and fresh peach-colored crop top.</div>
       <div class="size-select">
         <label for="size18">Size:</label>
@@ -286,7 +286,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Peach SPL T-Shirt.png" alt="Peach SPL T-Shirt">
+      <img src="images/Peach%20SPL%20T-Shirt.png" alt="Peach SPL T-Shirt">
       <div class="item-description">Peach SPL T-Shirt - Everyday comfort with a pop of peach.</div>
       <div class="size-select">
         <label for="size19">Size:</label>
@@ -300,7 +300,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/SPL Logo Baseball Cap.png" alt="SPL Logo Baseball Cap">
+      <img src="images/SPL%20Logo%20Baseball%20Cap.png" alt="SPL Logo Baseball Cap">
       <div class="item-description">SPL Logo Baseball Cap - Cap off your look with SPL pride.</div>
       <div class="size-select">
         <label for="size20">Size:</label>
@@ -314,7 +314,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/SPL Logo Ovary Body Suit.png" alt="SPL Logo Ovary Body Suit">
+      <img src="images/SPL%20Logo%20Ovary%20Body%20Suit.png" alt="SPL Logo Ovary Body Suit">
       <div class="item-description">SPL Logo Ovary Body Suit - Unique body suit with SPL ovary logo.</div>
       <div class="size-select">
         <label for="size21">Size:</label>
@@ -328,7 +328,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/SPL Logo Tote Bags.png" alt="SPL Logo Tote Bags">
+      <img src="images/SPL%20Logo%20Tote%20Bags.png" alt="SPL Logo Tote Bags">
       <div class="item-description">SPL Logo Tote Bags - Carry your essentials with SPL style.</div>
       <div class="size-select">
         <label for="size22">Size:</label>
@@ -342,7 +342,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/SPL Pajama Sets Loungewear.png" alt="SPL Pajama Sets Loungewear">
+      <img src="images/SPL%20Pajama%20Sets%20Loungewear.png" alt="SPL Pajama Sets Loungewear">
       <div class="item-description">SPL Pajama Sets Loungewear - Soft and cozy loungewear sets.</div>
       <div class="size-select">
         <label for="size23">Size:</label>
@@ -356,7 +356,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/SPL Scarves Bandanas Collection.png" alt="SPL Scarves Bandanas Collection">
+      <img src="images/SPL%20Scarves%20Bandanas%20Collection.png" alt="SPL Scarves Bandanas Collection">
       <div class="item-description">SPL Scarves & Bandanas - Accessorize with unique SPL prints.</div>
       <div class="size-select">
         <label for="size24">Size:</label>
@@ -370,7 +370,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/Teal SPL Yoga Pants.png" alt="Teal SPL Yoga Pants">
+      <img src="images/Teal%20SPL%20Yoga%20Pants.png" alt="Teal SPL Yoga Pants">
       <div class="item-description">Teal SPL Yoga Pants - Flexible and colorful for your routines.</div>
       <div class="size-select">
         <label for="size25">Size:</label>
