--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
       <button class="add-to-cart" onclick="alert('Demo only')">Add to Cart</button>
     </div>
     <div class="item-card">
-      <img src="images/whote body suit.png" alt="Whote Body Suit">
+      <img src="imageswhote%20body%20suit.png" alt="Whote Body Suit">
       <div class="item-description">Whote Body Suit - Sleek white body suit for versatile wear.</div>
       <div class="size-select">
         <label for="size27">Size:</label>
