--- a/index.html
+++ b/index.html
@@ -1,1 +1,240 @@
 
+<p>SPL Project Apparel Shop</p>
+<h1>SPL Project Apparel Shop</h1>
+<div>
+<div><img src="images/Aqua-Mint%20Sports%20Bra.png" alt="Aqua-Mint Sports Bra" />
+<div>Aqua-Mint Sports Bra - Supportive and stylish for workouts.</div>
+<div><label for="size2">Size:</label><select name="size2">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Blush%20SPL%20Crop%20Top.png" alt="Blush SPL Crop Top" />
+<div>Blush SPL Crop Top - Soft and trendy crop top in blush pink.</div>
+<div><label for="size3">Size:</label><select name="size3">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Blush%20SPL%20T-Shirt.png" alt="Blush SPL T-Shirt" />
+<div>Blush SPL T-Shirt - Classic t-shirt in blush for everyday wear.</div>
+<div><label for="size4">Size:</label><select name="size4">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Color-Block%20Active%20Top.png" alt="Color-Block Active Top" />
+<div>Color-Block Active Top - Stylish color-block design for activity or leisure.</div>
+<div><label for="size5">Size:</label><select name="size5">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Comfort%20Grief%20Pillow.png" alt="Comfort Grief Pillow" />
+<div>Comfort Grief Pillow - Soft pillow providing comfort and support.</div>
+<div><label for="size6">Size:</label><select name="size6">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Comfort%20Grief%20Socks.png" alt="Comfort Grief Socks" />
+<div>Comfort Grief Socks - Cozy socks for moments of relaxation.</div>
+<div><label for="size7">Size:</label><select name="size7">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/cool%20body%20suit.png" alt="Cool Body Suit" />
+<div>Cool Body Suit - Sleek and comfortable body suit for all-day wear.</div>
+<div><label for="size8">Size:</label><select name="size8">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Coral%20Sports%20Bra%20Design.png" alt="Coral Sports Bra Design" />
+<div>Coral Sports Bra Design - Vibrant coral color for a fresh look.</div>
+<div><label for="size9">Size:</label><select name="size9">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Deep%20Berry%20SPL%20Yoga%20Pants.png" alt="Deep Berry SPL Yoga Pants" />
+<div>Deep Berry SPL Yoga Pants - Stretchy and bold for your yoga sessions.</div>
+<div><label for="size10">Size:</label><select name="size10">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Flesh-Colored%20SPL%20Body%20Suit.png" alt="Flesh-Colored SPL Body Suit" />
+<div>Flesh-Colored SPL Body Suit - Form-fitting suit in natural tones.</div>
+<div><label for="size11">Size:</label><select name="size11">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Lavender%20SPL%20Crop%20Top.png" alt="Lavender SPL Crop Top" />
+<div>Lavender SPL Crop Top - Soft lavender crop top with SPL logo.</div>
+<div><label for="size12">Size:</label><select name="size12">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Lavender%20SPL%20T-Shirt.png" alt="Lavender SPL T-Shirt" />
+<div>Lavender SPL T-Shirt - Everyday tee in gentle lavender hue.</div>
+<div><label for="size13">Size:</label><select name="size13">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Long%20Sleeve%20Anatomy%20Body%20Suit%20with%20Skirt.png" alt="Long Sleeve Anatomy Body Suit with Skirt" />
+<div>Long Sleeve Anatomy Body Suit with Skirt - Unique design for comfort and style.</div>
+<div><label for="size14">Size:</label><select name="size14">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Mint%20Sports%20Bra%20Design.png" alt="Mint Sports Bra Design" />
+<div>Mint Sports Bra Design - Refreshing mint for sporty looks.</div>
+<div><label for="size15">Size:</label><select name="size15">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Mint%20Tank%20with%20Coral%20Accents.png" alt="Mint Tank with Coral Accents" />
+<div>Mint Tank with Coral Accents - Breathable tank with vibrant accents.</div>
+<div><label for="size16">Size:</label><select name="size16">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Navy%20SPL%20Yoga%20Pants.png" alt="Navy SPL Yoga Pants" />
+<div>Navy SPL Yoga Pants - Classic navy yoga pants for all activities.</div>
+<div><label for="size17">Size:</label><select name="size17">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Peach%20SPL%20Crop%20Top.png" alt="Peach SPL Crop Top" />
+<div>Peach SPL Crop Top - Light and fresh peach-colored crop top.</div>
+<div><label for="size18">Size:</label><select name="size18">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Peach%20SPL%20T-Shirt.png" alt="Peach SPL T-Shirt" />
+<div>Peach SPL T-Shirt - Everyday comfort with a pop of peach.</div>
+<div><label for="size19">Size:</label><select name="size19">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/SPL%20Logo%20Baseball%20Cap.png" alt="SPL Logo Baseball Cap" />
+<div>SPL Logo Baseball Cap - Cap off your look with SPL pride.</div>
+<div><label for="size20">Size:</label><select name="size20">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/SPL%20Logo%20Ovary%20Body%20Suit.png" alt="SPL Logo Ovary Body Suit" />
+<div>SPL Logo Ovary Body Suit - Unique body suit with SPL ovary logo.</div>
+<div><label for="size21">Size:</label><select name="size21">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/SPL%20Logo%20Tote%20Bags.png" alt="SPL Logo Tote Bags" />
+<div>SPL Logo Tote Bags - Carry your essentials with SPL style.</div>
+<div><label for="size22">Size:</label><select name="size22">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/SPL%20Pajama%20Sets%20Loungewear.png" alt="SPL Pajama Sets Loungewear" />
+<div>SPL Pajama Sets Loungewear - Soft and cozy loungewear sets.</div>
+<div><label for="size23">Size:</label><select name="size23">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/SPL%20Scarves%20Bandanas%20Collection.png" alt="SPL Scarves Bandanas Collection" />
+<div>SPL Scarves &amp; Bandanas - Accessorize with unique SPL prints.</div>
+<div><label for="size24">Size:</label><select name="size24">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/Teal%20SPL%20Yoga%20Pants.png" alt="Teal SPL Yoga Pants" />
+<div>Teal SPL Yoga Pants - Flexible and colorful for your routines.</div>
+<div><label for="size25">Size:</label><select name="size25">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="images/topography.png" alt="Topography" />
+<div>Topography - Unique topography-inspired accessory or apparel.</div>
+<div><label for="size26">Size:</label><select name="size26">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+<div><img src="imageswhote%20body%20suit.png" alt="Whote Body Suit" />
+<div>Whote Body Suit - Sleek white body suit for versatile wear.</div>
+<div><label for="size27">Size:</label><select name="size27">
+<option value="s">S</option>
+<option value="m">M</option>
+<option value="l">L</option>
+<option value="xl">XL</option>
+</select></div>
+<button>Add to Cart</button></div>
+</div>
+<div>&times; <img alt="" /></div>
