--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+fwhite<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -690,7 +690,16 @@
         category: "activewear"
       }
     ];
-
+      },
+      {
+        id: 26,
+        name: "White Body Suit",
+        image: "images/blanket.png",
+        description: "•	Weighted blankets – Provide a sense of security and calm.",
+        sizes: ["XS", "S", "M", "L", "XL"],
+        category: "activewear"
+      }
+    ];
     // Shopping cart (in-memory storage)
     let cart = [];
 
