--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
       {
         id: 27,
         name: "Weighted Blanket",
-        image: "images/blanket.png",
+        image: "images/blanket.jpg",
         description: "Weighted blankets – Provide a sense of security and calm.",
         sizes: ["Twin", "Full", "Queen", "King"],
         category: "accessories"
