--- a/index.html
+++ b/index.html
@@ -703,6 +703,14 @@
         description: "Weighted blankets – Provide a sense of security and calm.",
         sizes: ["Twin", "Full", "Queen", "King"],
         category: "accessories"
+      },
+      {
+        id: 28,
+        name: "White Body Suit",
+        image: "images/NavyBlueMug.png",
+        description: "Wrap your hands around warmth and meaning with the SPL Project Comfort Mug in deep navy blue. Designed to honor and support those who have experienced spontaneous pregnancy loss, this 11 oz ceramic mug features a smooth matte finish, a sturdy handle, and the SPL Project logo as a symbol of compassion and connection. Whether you're joingin a vodcast or reflecting quietly, this mug offers comfort with every sip..",
+        sizes: ["11oz", "15oz"],
+        category: "Mugs"
       }
     ];
 
