--- a/index.html
+++ b/index.html
@@ -706,9 +706,49 @@
       },
       {
         id: 28,
-        name: "White Body Suit",
+        name: "Navy Blue SPL Mug",
         image: "images/NavyBlueMug.png",
-        description: "Wrap your hands around warmth and meaning with the SPL Project Comfort Mug in deep navy blue. Designed to honor and support those who have experienced spontaneous pregnancy loss, this 11 oz ceramic mug features a smooth matte finish, a sturdy handle, and the SPL Project logo as a symbol of compassion and connection. Whether you're joingin a vodcast or reflecting quietly, this mug offers comfort with every sip..",
+        description: "Wrap your hands around warmth and meaning with the SPL Project Comfort Mug in deep navy blue. Designed to honor and support those who have experienced SPL, ceramic mugs feature a smooth matte finish, a sturdy handle, and the SPL logo as a symbol of compassion and connection. Whether you're joinging a vodcast or reflecting quietly, this mug offers comfort with every sip.",
+        sizes: ["11oz", "15oz"],
+        category: "Mugs"
+      },
+       {
+        id: 29,
+        name: "Your SPL Latte Mug",
+        image: "images/LatteMug.png",
+        description: "SPL Comfort Mug – Heart Edition -Sip with purpose. This white ceramic mug features the SPL logo framed by a heartbeat line, symbolizing care and connection for those touched by spontaneous pregnancy loss.",
+        sizes: ["11oz", "15oz"],
+        category: "Mugs"
+      },
+       {
+        id: 30,
+        name: "Your SPL Baby Blue Mug",
+        image: "images/BabyBlueMug.png",
+        description: "SPL Comfort Mug – Baby Blue Edition - Gentle and soothing, this baby blue ceramic mug features the SPL logo, offering warmth and recognition for your shared story. Personalized with “the name of your choice,” it honors individual voices within the SPL Project.",
+        sizes: ["11oz", "15oz"],
+        category: "Mugs"
+      },
+       {
+        id: 31,
+        name: "Your SPL Pink Mug",
+        image: "images/PinkMug.png",
+        description: "SPL Comfort Mug – Pink Edition - Soft and heartfelt, this pink ceramic mug features the SPL logo, symbolizing love and resilience. Personalized with “a name of your choice,” it honors the stories behind every sip.",
+        sizes: ["11oz", "15oz"],
+        category: "Mugs"
+      },
+      {
+        id: 32,
+        name: "SPL Comfort Mug – Rainbow Edition",
+        image: "images/RainbowMug.png",
+        description: "SPL Comfort Mug – Rainbow Edition - Bright and bold, this rainbow-gradient ceramic mug features the SPL logo, celebrating diversity and healing. It honors every unique story shared through the SPL Project.",
+        sizes: ["11oz", "15oz"],
+        category: "Mugs"
+      },
+      {
+        id: 33,
+        name: "SPL Comfort Mug – Green Edition",
+        image: "images/GreenMug.png",
+        description: "SPL Comfort Mug – Rainbow Edition - Bright and bold, this rainbow-gradient ceramic mug features the SPL logo, celebrating diversity and healing. It honors every unique story shared through the SPL Project.",
         sizes: ["11oz", "15oz"],
         category: "Mugs"
       }
